--- a/app/src/main/res/layout/content_eta_route_number.xml
+++ b/app/src/main/res/layout/content_eta_route_number.xml
@@ -27,13 +27,13 @@
             android:id="@+id/routeBusNumberTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="start"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="@string/demo_card_route_number"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +47,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/bg_route_badge_mtr"
         android:gravity="center"
         android:maxLines="1"
@@ -65,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/bg_route_badge_lrt"
         android:gravity="center"
         android:maxLines="1"
