--- a/app/src/main/res/layout/fragment_eta_layout_selection.xml
+++ b/app/src/main/res/layout/fragment_eta_layout_selection.xml
@@ -23,6 +23,7 @@
             android:background="@color/eta_card_background">
 
             <include
+                android:id="@+id/content_eta_classic"
                 layout="@layout/content_eta_classic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -62,6 +63,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/eta_card_background"
         android:orientation="vertical"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
