--- a/app/src/main/res/layout/item_eta_classic.xml
+++ b/app/src/main/res/layout/item_eta_classic.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/eta_card_background">
+    android:background="@color/eta_card_background"
+    android:minHeight="48dp">
 
     <include
         android:id="@+id/content"
