--- a/app/src/main/res/drawable/bg_stop_map_bottom_sheet.xml
+++ b/app/src/main/res/drawable/bg_stop_map_bottom_sheet.xml
@@ -4,6 +4,6 @@
     <corners
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
-    <solid android:color="@color/background" />
+    <solid android:color="@color/bottom_sheet_background" />
 
 </shape>
