--- a/app/src/main/res/layout/content_eta_classic_route_number.xml
+++ b/app/src/main/res/layout/content_eta_classic_route_number.xml
@@ -9,8 +9,7 @@
         android:id="@+id/routeBusNumberLl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="gone">
+        android:visibility="visible">
 
         <View
             android:id="@+id/routeCompanyColor"
@@ -49,12 +48,7 @@
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/routeMTRNumberTv"
@@ -82,11 +76,7 @@
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/routeLRTNumberTv"
