--- a/app/src/main/res/layout/content_eta_compact_route_number.xml
+++ b/app/src/main/res/layout/content_eta_compact_route_number.xml
@@ -9,18 +9,17 @@
         android:id="@+id/routeBusNumberLl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="gone">
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="2dp"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/routeBusNumberTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="2dp"
-            android:gravity="center"
+            android:gravity="start"
             android:maxLines="1"
             android:text="@string/demo_card_route_number"
             android:textSize="28sp"
@@ -36,8 +35,11 @@
         android:id="@+id/routeMTRNumberLl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="2dp"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/routeMTRNumberTv"
@@ -50,7 +52,6 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
@@ -61,16 +62,16 @@
         android:id="@+id/routeLRTNumberLl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="2dp"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/routeLRTNumberTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="2dp"
             android:background="@drawable/bg_route_badge_lrt"
             android:gravity="center"
             android:maxLines="1"
@@ -79,7 +80,6 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="614P" />
