--- a/app/src/main/res/layout/content_eta_standard_route_number.xml
+++ b/app/src/main/res/layout/content_eta_standard_route_number.xml
@@ -9,8 +9,7 @@
         android:id="@+id/routeBusNumberLl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        tools:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/routeBusNumberTv"
@@ -20,7 +19,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="2dp"
-            android:gravity="center"
+            android:gravity="end"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="@string/demo_card_route_number"
@@ -41,12 +40,7 @@
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/routeMTRNumberTv"
@@ -56,11 +50,10 @@
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
@@ -74,11 +67,7 @@
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/routeLRTNumberTv"
