--- a/app/src/main/res/layout/item_bottom_sheet_route.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_route.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background"
+    android:background="@color/eta_card_background"
     android:foreground="?android:attr/selectableItemBackground"
     android:minHeight="48dp">
 
