--- a/app/src/main/res/layout/item_bottom_sheet_stop.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_stop.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/eta_card_background"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:minHeight="?android:listPreferredItemHeight">
 
     <View
         android:id="@+id/stopCompanyColor"
