--- a/app/src/main/res/layout/content_bottom_sheet_route_list.xml
+++ b/app/src/main/res/layout/content_bottom_sheet_route_list.xml
@@ -43,7 +43,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/streetViewBtn"
-            style="@style/MainBorderButton"
+            style="@style/PrimaryBorderButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
@@ -66,7 +66,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/navigationBtn"
-            style="@style/MainBorderButton"
+            style="@style/PrimaryBorderButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
