--- a/app/src/main/res/layout/fragment_edit_eta.xml
+++ b/app/src/main/res/layout/fragment_edit_eta.xml
@@ -10,7 +10,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
+        android:background="@color/common_bg"
         android:orientation="vertical"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
