--- a/app/src/main/res/layout/fragment_eta.xml
+++ b/app/src/main/res/layout/fragment_eta.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_eta_classic" />
+        tools:listitem="@layout/item_eta_card_classic" />
 
     <include
         android:id="@+id/emptyViewCl"
