--- a/app/src/main/res/layout/item_bottom_sheet_route.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_route.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/eta_card_background"
     android:foreground="?android:attr/selectableItemBackground"
-    android:minHeight="48dp">
+    android:minHeight="?android:listPreferredItemHeight">
 
     <include
         android:id="@+id/routeNumberContainer"
@@ -75,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|end"
                 android:text="@string/demo_card_eta_minute_classic"
-                android:textColor="@color/primary"
+                android:textColor="@color/eta_card_classic_minute"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/etaTimeRv"
