--- a/app/src/main/res/layout/lb_fragment_traffic.xml
+++ b/app/src/main/res/layout/lb_fragment_traffic.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bg_mapview_title"
+            android:background="@color/lb_mapview_title_bg"
             android:elevation="1dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:paddingStart="20dp"
+                android:textColor="@color/lb_mapview_title"
                 android:paddingTop="8dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="8dp"
