--- a/app/src/main/res/layout/lb_guidance_eta_layout.xml
+++ b/app/src/main/res/layout/lb_guidance_eta_layout.xml
@@ -1,88 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?attr/guidanceContainerStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        style="?attr/guidanceContainerStyle"
+    <ImageView
+        android:id="@+id/guidance_icon"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/guidance_title"
+        style="?attr/guidanceTitleStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="guidance_title" />
+
+    <TextView
+        android:id="@+id/guidance_breadcrumb"
+        style="?attr/guidanceBreadcrumbStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/guidance_title"
+        app:layout_constraintStart_toStartOf="@id/guidance_title"
+        tools:text="guidance_breadcrumb" />
+
+    <TextView
+        android:id="@+id/guidance_description"
+        style="?attr/guidanceDescriptionStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/guidance_title"
+        app:layout_constraintTop_toBottomOf="@id/guidance_title"
+        tools:text="guidance_description" />
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/eta_card_background"
+        app:cardCornerRadius="@dimen/eta_card_radius"
+        app:layout_constraintStart_toStartOf="@id/guidance_title"
+        app:layout_constraintTop_toBottomOf="@id/guidance_description">
 
-        <ImageView
-            android:id="@+id/guidance_icon"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/guidance_title"
-            style="?attr/guidanceTitleStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="guidance_title" />
-
-        <TextView
-            android:id="@+id/guidance_breadcrumb"
-            style="?attr/guidanceBreadcrumbStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/guidance_title"
-            app:layout_constraintStart_toStartOf="@id/guidance_title"
-            tools:text="guidance_breadcrumb" />
-
-        <TextView
-            android:id="@+id/guidance_description"
-            style="?attr/guidanceDescriptionStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/guidance_title"
-            app:layout_constraintTop_toBottomOf="@id/guidance_title"
-            tools:text="guidance_description" />
-
-        <androidx.cardview.widget.CardView
+        <include
+            android:id="@+id/eta_demo_classic"
+            layout="@layout/content_eta_classic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/guidance_title"
-            app:layout_constraintTop_toBottomOf="@id/guidance_description">
+            android:visibility="gone" />
 
-            <include
-                android:id="@+id/eta_demo_classic"
-                layout="@layout/content_eta_classic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/eta_demo_compact"
-                layout="@layout/content_eta_compact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/eta_demo_standard"
-                layout="@layout/content_eta_standard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/eta_demo_compact"
+            layout="@layout/content_eta_compact"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
+            android:visibility="gone" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/eta_demo_standard"
+            layout="@layout/content_eta_standard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
-</FrameLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
