--- a/app/src/main/res/menu/main_bottom_bar.xml
+++ b/app/src/main/res/menu/main_bottom_bar.xml
@@ -5,17 +5,17 @@
         android:id="@+id/home"
         android:icon="@drawable/ic_home_24"
         android:title="@string/main_tab_title_1"
-        app:exb_color="@color/md_blue_400" />
+        app:exb_color="@color/primary" />
 
     <item
         android:id="@+id/searchMap"
         android:icon="@drawable/ic_map_24"
         android:title="@string/main_tab_title_3"
-        app:exb_color="@color/md_blue_400" />
+        app:exb_color="@color/primary" />
 
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings_24"
         android:title="@string/main_tab_title_2"
-        app:exb_color="@color/md_blue_400" />
+        app:exb_color="@color/primary" />
 </menu>
