--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="square_image_card_height">128dp</dimen>
 
     <dimen name="eta_compact_stop_name">14sp</dimen>
+
+    <dimen name="eta_card_radius">12dp</dimen>
 </resources>
