--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,38 +85,38 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <style name="MainButton" parent="Widget.MaterialComponents.Button">
+    <style name="PrimaryButton" parent="Widget.MaterialComponents.Button">
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white</item>
-        <item name="colorAccent">@color/mainButton</item>
-        <item name="colorButtonNormal">@color/mainButton</item>
-        <item name="colorControlHighlight">@color/secondaryText</item>
+        <item name="colorAccent">@color/button_primary_accent</item>
+        <item name="colorButtonNormal">@color/button_primary_accent</item>
+        <item name="colorControlHighlight">@color/common_text_secondary</item>
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.Button.50</item>
     </style>
 
-    <style name="GreenButton" parent="Widget.MaterialComponents.Button">
+    <style name="PinkButton" parent="Widget.MaterialComponents.Button">
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white</item>
-        <item name="colorAccent">@color/greenButton</item>
-        <item name="colorButtonNormal">@color/greenButton</item>
-        <item name="colorControlHighlight">@color/secondaryText</item>
+        <item name="colorAccent">@color/button_pink_accent</item>
+        <item name="colorButtonNormal">@color/button_pink_accent</item>
+        <item name="colorControlHighlight">@color/common_text_secondary</item>
     </style>
 
-    <style name="MainBorderButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="PrimaryBorderButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:gravity">center</item>
-        <item name="colorAccent">@color/mainButton</item>
-        <item name="colorButtonNormal">@color/mainButton</item>
-        <item name="colorControlHighlight">@color/secondaryText</item>
+        <item name="colorAccent">@color/button_primary_accent</item>
+        <item name="colorButtonNormal">@color/button_primary_accent</item>
+        <item name="colorControlHighlight">@color/common_text_secondary</item>
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.Button.50</item>
         <item name="background">@color/white</item>
     </style>
 
     <style name="BorderlessButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/primaryText</item>
+        <item name="android:textColor">@color/common_text_primary</item>
         <item name="colorAccent">@color/transparent</item>
         <item name="colorButtonNormal">@color/transparent</item>
-        <item name="colorControlHighlight">@color/secondaryText</item>
+        <item name="colorControlHighlight">@color/common_text_secondary</item>
     </style>
 
     <style name="Eta.Card.Mobile" parent="">
