--- a/app/src/main/res/layout/content_eta_compact_route_number.xml
+++ b/app/src/main/res/layout/content_eta_compact_route_number.xml
@@ -77,6 +77,7 @@
             android:maxLines="1"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
+            android:textColor="@color/common_text_primary"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
