--- a/app/src/main/res/layout/content_eta_standard.xml
+++ b/app/src/main/res/layout/content_eta_standard.xml
@@ -111,6 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/demo_card_eta_minute_compact_1"
+                android:textColor="@color/eta_card_minutes_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/eta1UnitTv"
                 app:layout_constraintStart_toStartOf="parent"
