--- a/app/src/main/res/values-television/colors.xml
+++ b/app/src/main/res/values-television/colors.xml
@@ -1,5 +1,5 @@
 <resources>
     <color name="eta_card_background">#424242</color>
     <color name="eta_card_background_selected">#525252</color>
-    <color name="eta_card_classic_minute">@color/primary_light</color>
+    <color name="eta_card_minutes_text">@color/primary_light</color>
 </resources>
