feat: add NLB data

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,7 +67,7 @@
     <color name="brand_color_gmb">#2E7D32</color>
     <color name="brand_color_mtr">#00234F</color>
     <color name="brand_color_lrt">#CD9700</color>
-    <color name="brand_color_nlb">#CD9700</color>
+    <color name="brand_color_nlb">#149425</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
 
     <color name="transparent">#00000000</color>
