feat: add geohash support and invalid data handle

--- a/app/src/main/res/layout/fragment_eta.xml
+++ b/app/src/main/res/layout/fragment_eta.xml
@@ -30,6 +30,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:orientation="vertical"
+        android:scrollbars="vertical"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
